--- a/src/app/shared/components/child/child.component.html
+++ b/src/app/shared/components/child/child.component.html
@@ -1,4 +1,4 @@
-<p>
-    {{fetchedData|json}}
-</p>
 <button type="button" class="btn btn-warning" (click)="redirectToBack()">Back</button>
+<p>
+    {{fetchedData.data|json}}
+</p>
