changes on crud operation

--- a/src/app/shared/components/child/child.component.html
+++ b/src/app/shared/components/child/child.component.html
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-warning" (click)="redirectToBack()">Back</button>
+<button type="button" class="btn btn-warning" (click)="redirectBack()">Back</button>
 <p>
-    {{fetchedData.data|json}}
+    {{receivedDataFromParent|json}}
 </p>
