--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center align-items-center pt-5">
-    <form class="p-5" style="box-shadow: 2px 2px 10px #1b1b18;">
+    <form class="p-5 rounded-4" style="box-shadow: 2px 2px 10px #1b1b18;">
         <label for="inputEmail">Login</label><br>
         <input type="text" id="inputEmail" pInputText [(ngModel)]="loginObj.emailId"
             [ngModelOptions]="{standalone:true}" name="email" /><br>
@@ -7,7 +7,7 @@
         <p-password [feedback]="false" id="inputPassword" [(ngModel)]="loginObj.password"
             [ngModelOptions]="{standalone:true}" name="password" /><br>
         <div class="mt-3">
-            <p-button label="Submit" (onClick)="onSubmit()" />
+            <p-button label="Submit" type="button" (onClick)="onSubmit()" />
         </div>
     </form>
 </div>
