--- a/src/app/shared/components/crud/crud.component.html
+++ b/src/app/shared/components/crud/crud.component.html
@@ -1,7 +1,7 @@
 <p-table [value]="getUserData" [tableStyle]="{ 'min-width': '50rem' }">
     <ng-template #header>
         <tr>
-            <th>UserID</th>
+            <th>UserId</th>
             <th>First Name</th>
             <th>Last Name</th>
             <th>Email</th>
