--- a/src/app/shared/components/forms/forms.component.html
+++ b/src/app/shared/components/forms/forms.component.html
@@ -1,6 +1,6 @@
 <div class="main-container h-100 w-100 d-flex justify-content-center align-items-center">
     <div class="container d-flex flex-column w-25 p-4 rounded-3" style="box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);">
-        <h3>Registration Form (changes from the dummy branch)</h3>
+        <h3>Registration Form (removing changes from the dummy branch)</h3>
         <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
             <label for="inputFirstName">First Name</label><br>
             <input type="text" id="inputFirstName" formControlName="firstName" class="form-control w-100">
