--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -1,9 +1,9 @@
 <div class="d-flex justify-content-center align-items-center pt-5">
     <form class="p-5 rounded-4" style="box-shadow: 2px 2px 10px #1b1b18;">
-        <label for="inputEmail">Login (changes from the dummy branch)</label><br>
+        <label for="inputEmail">Login (removing the changes from the dummy branch)</label><br>
         <input type="text" id="inputEmail" pInputText [(ngModel)]="loginObj.emailId"
             [ngModelOptions]="{standalone:true}" name="email" /><br>
-        <label for="inputPassword">Password (changes from the dummy branch)</label><br>
+        <label for="inputPassword">Password (removing the changes from the dummy branch)</label><br>
         <p-password [feedback]="false" id="inputPassword" [(ngModel)]="loginObj.password"
             [ngModelOptions]="{standalone:true}" name="password" /><br>
         <div class="mt-3">
